Add HTML content

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <link  href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <title></title>
+    <title>Greeting App</title>
   </head>
   <body>
     <header>
-      <h1></h1>
+      <h1>Greeting App</h1>
     </header>
     <main>
-      <h2></h2>
-      <input type="text" placeholder="" required
+      <h3>Enter your name to get a customized greeting!</h3>
+      <input type="text" placeholder="name" required
        minlength="1" maxlength="20">
-      <button type="button"></button>
-      <h1></h1>
+      <button type="button">Greet Me!</button>
+      <h1>Hi, Robyn</h1>
     </main>
   </body>
 </html>
