--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./styles.css">
     <link  href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <title>Greeting App</title>
   </head>
@@ -14,7 +15,7 @@
       <input type="text" placeholder="name" required
        minlength="1" maxlength="20">
       <button type="button">Greet Me!</button>
-      <h1>Hi, Robyn</h1>
+      <h1 class="greeting">Hi, Robyn</h1>
     </main>
   </body>
 </html>
