--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <h1>Greeting App</h1>
     </header>
     <main>
-      <h3>Enter your name to get a customized greeting!</h3>
+      <p>Enter your name to get a customized greeting!</p>
       <input type="text" placeholder="name" required
        minlength="1" maxlength="20">
       <button type="button">Greet Me!</button>
-      <h1 class="greeting">Hi, Robyn</h1>
+      <h3 class="greeting">Hi, Robyn</h3>
     </main>
   </body>
 </html>
