Style button bottom

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Greeting App</h1>
     </header>
     <main>
-      <p>Enter your name to get a customized greeting!</p>
+      <p>Enter your name to get a <br> customized greeting!</p>
       <input type="text" placeholder="name" required
        minlength="1" maxlength="20">
       <button type="button">Greet Me!</button>
