Format margins and clean up code to match guidelines

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     </header>
     <main>
       <p>Enter your name to get a <br> customized greeting!</p>
-      <input type="text" placeholder="name" required
-       minlength="1" maxlength="20">
-      <button type="button">Greet Me!</button>
-      <h3 class="greeting">Hi, Robyn</h3>
+      <div class="container">
+        <input type="text" placeholder="name" required
+        minlength="1" maxlength="20">
+        <button type="button">Greet Me!</button>
+      </div>
+      <h4 class="greeting">Hi, Robyn</h4>
     </main>
   </body>
 </html>
