Add functionality with JavaScript

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <main>
       <p>Enter your name to get a <br> customized greeting!</p>
       <div class="container">
-        <input type="text" placeholder="name" required
+        <input id="name" type="text" placeholder="name" required
         minlength="1" maxlength="20">
-        <button type="button">Greet Me!</button>
+        <button class="greet-me" type="button">Greet Me!</button>
       </div>
-      <h4 class="greeting">Hi, Robyn</h4>
+      <h3></h3>
     </main>
+    <script src="..\greeting-app\index.js"></script>
   </body>
 </html>
