Add comment to h1 class

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <header>
-      <h1>Greeting App</h1>
+      <!-- Added class to try and adjust padding, however it is not showing up through github -->
+      <h1 class="heading">Greeting App</h1>
     </header>
     <main>
       <p>Enter your name to get a <br> customized greeting!</p>
